--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 		<div class="text-center container">
 			<h1 class=display-1>Joshua Nauman</h1>
 			<div class="Typist lead typist">Security Analyst | Software Development Hobbyist | Designer ツ</div>
+			<div class="Typist lead typist">GREM | GDAT | GNFA | FCC License Holder | Security +</div>
 			<div class=p-5>
 				<a target=_blank rel="noopener noreferrer" aria-label="Joshua Nauman's GitHub" href=https://github.com/theenawman><i class="fab fa-github fa-3x socialicons"></i></a>
 				<a target=_blank rel="noopener noreferrer" aria-label="Joshua Nauman's LinkedIn" href=https://www.linkedin.com/in/joshua-nauman-918872a1/><i class="fab fa-linkedin fa-3x socialicons"></i></a>
-				<!-- <a target=_blank rel="noopener noreferrer" aria-label="Joshua Nauman's Twitter DMs" href=https://www.twitter.com/theenawman/><i class="fab fa-twitter fa-3x socialicons"></i></a> -->
+				
 				
 			</div>
 			<a class="btn btn-outline-light btn-lg" role=button aria-label="Contact" href="mailto:madcap.knowing0p@icloud.com" target="_blank">Contact</a>
