--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name=description content="Joshua Nauman- Personal page">
 	<meta property=twitter:image content=/social-image.png>
 	<meta property=og:image content=/social-image.png>
-	<title>Joshua Nauman- Personal Page</title>
+	<title>Joshua Nauman - Cyber Security Analyst</title>
 	<link rel="stylesheet" href="main.css">
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
