--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,175 @@
-Hello world!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self';font-src https://use.fontawesome.com/  https://fonts.gstatic.com/; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com/; script-src 'self'  https://use.fontawesome.com/  https://cdn.jsdelivr.net/">
+    <title>Resume - Joshua Nauman</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
+</head>
+<body id="page-top">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+            <span class="d-block d-lg-none">Joshua Nauman</span>
+            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Certifications</a></li>
+            </ul>
+        </div>
+    </nav>
+    <!-- Page Content-->
+    <div class="container-fluid p-0">
+        <!-- About-->
+        <section class="resume-section" id="about">
+            <div class="resume-section-content">
+                <h1 class="mb-0">
+                    Joshua
+                    <span class="text-primary">Nauman</span>
+                </h1>
+                <div class="subheading mb-5">
+                    <a href="mailto:madcap.knowing0p@icloud.com">Email me</a>            
+                </div>
+                <p class="lead mb-5">Management consultant for cloud transformation offerings and product manager for KPMG's cloud transformation accelerators/tools.
+</p>
+<p class="lead mb-5">Sold and delivered the following projects to Fortune 500 companies: AWS/Azure cost optimization, AWS/Azure/GCP benchmarking, Cloud business case, Cloud migration planning, Private cloud business case, IT operating model, Application rationalization, and IT integration.</p>
+<p class="lead mb-5">Worked with companies in the following industries: Financial Services and Banking, Internet and Social Media, Healthcare, and Software</p>
+                <div class="social-icons">
+                    <a class="social-icon" href="https://www.linkedin.com/in/roman-zabaleta/"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="social-icon" href="https://github.com/romanzabaleta"><i class="fab fa-github"></i></a>
+                </div>
+            </div>
+        </section>
+        <hr class="m-0" />
+        <!-- Experience-->
+        <section class="resume-section" id="experience">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Experience</h2>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Senior Associate, CIO Advisory</h3>
+                        <div class="subheading mb-3">KPMG</div>
+                        <p>Product manager and management consultant for cloud transformation strategy product offerings. Built cloud transformation related software and solutions for client engagements and KPMG service offerings. Engaged with clients in delivering cloud benchmarking, cloud operating model, and cloud cost optimization projects.</p>
+                        <ul>
+                            <li> Led a successful release of KPMG's cloud transformation impact and disposition modeler solution by leading a geographically diverse team of three engineers, resulting in stakeholder buy-in for additional features and 100% timely completion of all story board tasks.
+                            </li>
+                            <li>Negotiated with product sponsors on which features and stories to include in upcoming product releases, persuading leadership to focus investments on feature updates with the highest marginal utility for the user experience.
+                            </li>
+                            <li> Authored a cloud cost benchmarking methodology for comparing services on AWS, Azure, and GCP, which then sold and successfully implemented for approximately $600k to a social media service company.
+                            </li>
+                            <li>Designed dashboards and UIs using Alteryx Designer, Python, and Power BI as front ends for self-service versions of cloud transformation software, generating a 95% decrease in engineering staff engaging on client projects related to that software.
+                            </li>
+                            <li>Constructed marketing and business development material to promote cloud transformation software and other consulting services for CIO Advisory, which were used to sell to several multi-million-dollar client accounts.
+                            </li>
+                            <li>Extensively analyzed a financial institution's multi-cloud infrastructure for quick-win cost optimization opportunities while leveraging Alteryx, leading to identification of cost inefficiencies the client was not aware of and a cost savings roadmap with opportunities netting up to 30%.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">January 2020 - Present</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Intern, CIO Advisory</h3>
+                        <div class="subheading mb-3">KPMG</div>
+                        <p>Managed deliverables for Enterprise Cloud Strategy and IT Infrastructure Wireless Assessment client engagements.
+                        </p>
+                        <ul>
+                            <li>Developed a cloud vision and strategy by reviewing current operations and analyzing infrastructure data to create detailed images of a large hospital system’s IT operations, leading to successful enterprise implementations of transparent “cloud-first” IT strategies.
+                            </li>
+                            <li>Conducted interviews with key stakeholders and subject matter experts to understand the client’s network infrastructure current state and maturity to help provide high-level observations and recommendations for a desired service delivery model, justifying a full upgrade of an entertainment holding company’s network infrastructure. 
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">May 2019 - August 2019</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Intern, Global Information Protection</h3>
+                        <div class="subheading mb-3">Amgen</div>
+                        <p>Managed various cross-functional projects to implement new systems and optimize processes throughout Amgen. Collaborated closely with Global Information Protection, Information Management, Cyber Defense, and Enterprise Systems Management.
+                        </p>
+                        <ul>
+                            <li>Modernized the service request process for global records management by adopting a DMAIC (Lean Six Sigma) approach to building a service catalog within the ServiceNow enterprise platform, increasing successful service-level agreements up to 99%.
+                            </li>
+                            <li>Expanded DMARC initiative security by using Agile Scrum to identify and implement DKIM and SPF authentication for all external partners, leading to a 100% elimination of emails spoofing Amgen’s primary domain.
+                            </li>
+                            <li>Created several highly customized reporting tools for the Information Management team, leading to the initial full visibility of the team’s performance for upper management.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">May 2018- August 2018</span></div>
+                </div>
+            </div>
+        </section>
+        <hr class="m-0" />
+        <!-- Education-->
+        <section class="resume-section" id="education">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Education</h2>
+                <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Master of Science, Information Systems and Operations Management</h3>
+                        <div class="subheading mb-3">University of Florida</div>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">2019</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Bachelor of Arts, Economics</h3>
+                        <div class="subheading mb-3">University of Florida</div>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">2018</span></div>
+                </div>
+            </div>
+        </section>
+        <hr class="m-0" />
+        <!-- Skills-->
+        <section class="resume-section" id="skills">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Certifications</h2>
+                <ul>
+                    <li>
+                    Alteryx Designer Advanced Certified (July 2021)
+                    <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/Alteryx-Advanced-cert.png" width="30%" height="30%" alt="..." /></span>
+                    </li>
+                    <li>
+                    AWS Solutions Architect Associate (March 2020)  
+                    <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/AWS-SolArchitect-Associate-2020.png" width="30%" height="30%" alt="..." /></span>                  
+                </li>
+                    <li>
+                    Microsoft Azure Fundamentals AZ-900 (February 2020)  
+                    <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/azure-fundamentals.png" width="30%" height="30%" alt="..." /></span>                                    
+                </li>
+                    <li>
+                    Additional Certifications  
+                    <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/AWS-CloudPractitioner-2020.png" width="10%" height="10%" alt="..." /><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/Alteryx-designer-core.png" width="10%" height="10%" alt="..." /></span>                                    
+                </li>
+                </ul>
+            </div>
+        </section>
+    </div>
+
+
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
+    <script src="js/github-widget.min.js"></script>
+
+</body>
+</html>
