--- a/resume.html
+++ b/resume.html
@@ -74,64 +74,17 @@
       <br>
       <br>
         <div class="container">
-            <h1 class="text-center">Certifications & Training</h1>
+            <h1 class="text-center">Certifications</h1>
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card certText">
                         <div class="card-body">
-                            <div style="position:absolute; left:50%; padding:5px;">
-                            <h4 class="card-title mt-3">GNFA</h4>
-                            <p class="card-text mt-3">GIAC Network Forensic Analyst (<a href="https://www.giac.org/certifications/network-forensic-analyst-gnfa/">GNFA</a>)</p>
-                            <p class="card-text mt-3"><a href="https://www.sans.org/cyber-security-courses/advanced-network-forensics-threat-hunting-incident-response/">FOR572</a>: Advanced Network Forensics: Threat Hunting, Analysis, and Incident Response</p>
-                            </div>
+                            <!--Credly Card's-->
                             <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="d24c90de-ab5b-4143-8b92-9c0ea163b44d" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
-                        </div>
-                    </div>  
-                </div>
-                <div class="col-lg-4 mt-4">
-                    <div class="card certText">
-                        <div class="card-body">
-                            <!--<i class='fas servicesIcon fa-layer-group'></i>-->
-                            <div style="position:absolute; left:50%; padding:5px;">
-                                <h4 class="card-title mt-3">GCDA</h4>
-                                <p class="card-text mt-3">GIAC Certified Detection Analyst (<a href="https://www.giac.org/certifications/certified-detection-analyst-gcda/">GCDA</a>)</p>
-                                <p class="card-text mt-3"><a href="https://www.sans.org/cyber-security-courses/siem-with-tactical-analytics/">SEC555</a>: SIEM with Tactical Analysis</p>
-                            </div>
-                            <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="e8d8690d-f1e1-4cd8-8d80-af065935e302" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="https://cdn.credly.com/assets/utilities/embed.js"></script>
-                        </div>
-                    </div>  
-                </div>
-                <div class="col-lg-4 mt-4">
-                    <div class="card certText">
-                        <div class="card-body">
-                            <div style="position:absolute; left:50%; padding:5px;">
-                                <h4 class="card-title mt-3">GDAT</h4>
-                                <p class="card-text mt-3">GIAC Defending Advanced Threats (<a href="https://www.giac.org/certifications/defending-advanced-threats-gdat/">GDAT</a>)</p>
-                                <p class="card-text mt-3"><a href="https://www.sans.org/cyber-security-courses/defeating-advanced-adversaries-kill-chain-defenses/"">SEC599</a>: Defeating Advanced Adversaries - Purple Team Tactics & Kill Chain Defenses</p>
-                            </div>
-                            <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="715e039e-27b8-4001-a25f-ffe132717783" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="https://cdn.credly.com/assets/utilities/embed.js"></script>
-                        </div>
-                    </div>  
-                </div>
-                <div class="col-lg-4 mt-4">
-                    <div class="card certText">
-                        <div class="card-body">
-                            <div style="position:absolute; left:50%; padding:5px;">
-                                <h4 class="card-title mt-3">Security+</h4>
-                                <p class="card-text mt-3">CompTIA Security+ (<a href="https://www.comptia.org/certifications/security">Sec+</a>)</p>
-                            </div>
-                            <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="b5e03362-0601-4a44-9f93-51a2d48123c2" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="https://cdn.credly.com/assets/utilities/embed.js"></script>
-                        </div>
-                    </div>  
-                </div>
-                <div class="col-lg-4 mt-4">
-                    <div class="card certText">
-                        <div class="card-body">
-                            <div style="padding:5px;">
-                                <h4 class="card-title mt-3">GREM</h4>
-                                <p class="card-text mt-3">GIAC Reverse Engineering Malware (<a href="https://www.giac.org/certifications/reverse-engineering-malware-grem/">GREM</a>)</p>
-                                <p class="card-text mt-3"><a href="https://www.sans.org/cyber-security-courses/reverse-engineering-malware-malware-analysis-tools-techniques/">FOR610</a>: Reverse-Engineering Malware: Malware Analysis Tools and Techniques</p>
-                            </div>
+                            <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="1c133def-970c-44e4-85f9-28e7dcb60beb" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                            <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="4b6c1d10-a8b6-4a4a-bbf5-f1dce91dcdc3" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                            <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="11bf2047-87d7-462c-b439-2aa1ffe54709" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                            <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="43ad9da2-315f-47ed-9c8f-bbefcdbb3326" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
                         </div>
                     </div>  
                 </div>
