--- a/extra.html
+++ b/extra.html
@@ -1,5 +1,6 @@
 
 <link rel="stylesheet" href="extra.css">
-.stars
-.twinkling
-.clouds
+<div class ="stars">
+<div class ="twinkling">
+<div class ="clouds">
+  </div></div></div>
