extra test background

--- a/extra.html
+++ b/extra.html
@@ -1,11 +1,3 @@
-<<<<<<< Updated upstream
-
-<link rel="stylesheet" href="extra.css">
-<div class ="stars">
-<div class ="twinkling">
-<div class ="clouds">
-  </div></div></div>
-=======
 <!DOCTYPE html>
 <html data-lt-installed=true style="" lang="en-US">
 
@@ -16,15 +8,14 @@
     <meta name=description content="Joshua Nauman- Personal page">
     <title>Joshua Nauman - Cyber Security Analyst</title>
     <link rel="stylesheet" href="extra.css">
+    <link rel="stylesheet" href="main.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <body>
-    <noscript class=sf-hidden>You need to enable JavaScript to run this app!</noscript>
-    
-        <div class=stars></div>
-        <div class="twinkling"></div>
-        <div class="clouds"></div>
+    <div id=home class="title bg-transparent bgstyle text-light min-vh-100 d-flex align-content-center align-items-center flex-wrap m-0 jumbotron jumbotron-fluid" style="overflow:hidden">
+        <div class="stars">
+            <div class="twinkling clouds">
         <div class="text-center container">
             <h1 class=display-1>Joshua Nauman</h1>
             <div class="Typist lead typist">Security Analyst | Software Development Hobbyist | Designer ツ</div>
@@ -33,10 +24,9 @@
                 <a target=_blank rel="noopener noreferrer" aria-label="Joshua Nauman's GitHub"
                     href=https://github.com/theenawman><i class="fab fa-github fa-3x socialicons"></i></a>
                 <a target=_blank rel="noopener noreferrer" aria-label="Joshua Nauman's LinkedIn"
-                    href=https://www.linkedin.com/in/joshua-nauman-918872a1 /><i
+                    href=https://www.linkedin.com/in/joshua-nauman-918872a1><i
                     class="fab fa-linkedin fa-3x socialicons"></i></a>
-
-
+                </div></div></div>
             </div>
             <a class="btn btn-outline-light btn-lg" role=button aria-label="Contact"
                 href="mailto:madcap.knowing0p@icloud.com" target="_blank">Contact</a>
@@ -45,4 +35,4 @@
 </body>
 
 </html>
->>>>>>> Stashed changes
+
